2006-04-18  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Update Pida information

2006-04-12  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): PyGTK 2.8.6

2006-04-07  Johan Dahlin  <jdahlin@async.com.br>

	* head.src: 
	* foot.src: Update, remove bonsai, lxr and software map,
	defunct. Make the link more relevant to pygtk.

2006-04-04  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): PyGTK 2.9.0

2006-03-30  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): PyGTK 2.8.5

2006-03-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add Alacarte

2006-03-24  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Improve GL O.B.S. text

2006-03-24  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add mezoGIS

2006-03-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add GL O.B.S.

2006-03-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add Band Shaw

2006-03-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add Listen

2006-03-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add FUPlayer

2006-02-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* newsitems.py: Added new article by Lawrence Oluyede to news.

2006-02-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/cairo-pygtk-widgets/
	* articles/cairo-pygtk-widgets/cairo-pygtk-widgets2.htm
	* articles/cairo-pygtk-widgets/geom-1.png
	* articles/cairo-pygtk-widgets/geom-2.png
	* articles/cairo-pygtk-widgets/clock.gif
	* articles/cairo-pygtk-widgets/clock_ex4.py
	* articles/cairo-pygtk-widgets/clock_ex5.py
	* :Added previous files to hold a local copy of the article.
	* articles.src: add article by Lawrence Oluyede

2006-02-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Changed JonoEdit to Jokosher and its URL
